removing h2 dependency and switching to mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.hibernate-orm.database.generation=update
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=quarkustest
-quarkus.datasource.password=sqlquarkustest
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkustest
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=ohai_app
+quarkus.datasource.password=ohai_password
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ohai_db
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.format-sql=true
