adding some logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=ohai_app
 quarkus.datasource.password=ohai_password
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ohai_db
-quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.log.format-sql=true
+quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.format-sql=false
+quarkus.log.file.path=/tmp/trace.log
