turing on logging in file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ quarkus.datasource.password=ohai_password
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ohai_db
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.log.format-sql=false
+quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.enable=true
 quarkus.log.file.path=/tmp/trace.log
