--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-quarkus.hibernate-orm.database.generation=update
-quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=ohai_app
-quarkus.datasource.password=ohai_password
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/ohai_db
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=<password>
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.hibernate-orm.database.default-schema=ohai_schema
+quarkus.hibernate-orm.database.generation.create-schemas=false
+quarkus.hibernate-orm.database.generation=none
+quarkus.flyway.schemas=ohai_schema
+quarkus.flyway.locations=classpath:db/migration
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.baseline-on-migrate=true
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.log.format-sql=false
 quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
